# CO650WBL_Advanced-Programming_task-1

./: CMakeLists.txt  README.md
include/: DrawableGameComponent.h  Game.h  GameComponent.h
src/: DrawableGameComponent.cpp  Game.cpp  GameComponent.cpp  main.cpp
